--- a/02_r-intro/06_vis-factor.html
+++ b/02_r-intro/06_vis-factor.html
@@ -117,7 +117,7 @@
 </section><section id="your-turn" class="slide level2 white">
 <h2>Your turn</h2>
 <p><img class="cover" src="images/blue.jpeg" alt="" width=2000></p>
-<p><span style="color:white">For this your turn use the <code>Titanic</code> object from the <code>classdata</code> package. (you might have to update the package using the command <code>devtools::github_install(&quot;heike/classdata&quot;)</code>) </span></p>
+<p><span style="color:white">For this your turn use the <code>Titanic</code> object from the <code>classdata</code> package. (you might have to update the package using the command <code>devtools::install_github(&quot;heike/classdata&quot;)</code>) </span></p>
 <ul>
 <li><span style="color:white">Draw a barchart of Gender. Interpret.</span></li>
 <li><span style="color:white">Map survival to fill color in the barchart of Gender. Interpret.</span></li>
