--- a/03_tidyverse/02_dplyr-examples.html
+++ b/03_tidyverse/02_dplyr-examples.html
@@ -59,12 +59,18 @@
 
   <header class="caption">
     <h1>dplyr examples</h1>
-    <p><a href="https://github.com/mangothecat/rmdshower" class="uri">https://github.com/mangothecat/rmdshower</a></p>
+    <p>Heike Hofmann</p>
   </header>
 
     
   
-<section id="happy-data" class="titleslide slide level1"><h2 class="shout">Happy data</h2></section><section id="the-happy-data-from-gss" class="slide level2">
+<section id="happy-data" class="titleslide slide level1"><h2 class="shout">Happy data</h2></section><section id="outline" class="slide level2">
+<h2>Outline</h2>
+<ul>
+<li>cleaning and upgrading the HAPPY data</li>
+<li>working with <code>group_by</code> and <code>summarise</code></li>
+</ul>
+</section><section id="the-happy-data-from-gss" class="slide level2">
 <h2>The Happy data from GSS</h2>
 <p>The General Social Survey (GSS) has been run by NORC every other year since 1972 to keep track of current opinions across the United States.</p>
 <p>An excerpt of the GSS data is available from our course website. Dowload the file <a href="">HAPPY.rds</a> and put the file into a folder called “data” next to your Rmd file. The following command is going to load the data into your R session:</p>
